// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`components > N8nBadge > props > should render a button when clickable 1`] = `
"<button type="button" class="MNI-badge badge outline xsmall clickable">
  <!--v-if--><span class="MNI-text step-2xs bold label label">Clickable badge</span>
  <!--v-if-->
</button>"
`;

exports[`components > N8nBadge > props > should render the selected variant and size 1`] = `
"<span class="MNI-badge badge secondary medium"><!--v-if--><span class="MNI-text step-xs bold label label">Secondary badge</span>
<!--v-if--></span>"
`;

exports[`components > N8nBadge > props > should render with default values correctly 1`] = `
"<span class="MNI-badge badge outline xsmall"><!--v-if--><span class="MNI-text step-2xs bold label label">Default badge</span>
<!--v-if--></span>"
`;
